[package]
name = "parser"
version = "0.1.0"
authors = ["Joshua Bassin <joshbassin98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.lalrpop]
version = "0.19.1"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.19.0"
lazy_static = "1.4.0"
regex = "1"